@@ -1,5 +1,6 @@
 2010-11-23  Steffen Kamper  <steffen@typo3.org>
 
+	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_autoloader
 	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_arraybrowser
 	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_ajax
 	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_admin
